добавил методы взаимодействия с кешированными постами