@@ -7,35 +7,32 @@ import faang.school.postservice.dto.post.PostResponseDto;
 import faang.school.postservice.dto.post.PostUpdateDto;
 import faang.school.postservice.kafka.EventsManager;
 import faang.school.postservice.mapper.post.PostMapper;
-import faang.school.postservice.model.Like;
+import faang.school.postservice.mapper.resource.ResourceMapper;
 import faang.school.postservice.model.Post;
 import faang.school.postservice.repository.PostRepository;
+import faang.school.postservice.service.news_feed.PostCacheService;
 import faang.school.postservice.service.post.filter.PostFilters;
 import faang.school.postservice.service.resource.ResourceService;
+import faang.school.postservice.service.s3.S3Service;
 import faang.school.postservice.util.ModerationDictionary;
 import faang.school.postservice.validator.post.PostValidator;
 import faang.school.postservice.validator.resource.ResourceValidator;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpEntity;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
@@ -64,6 +61,13 @@ public class PostServiceTest {
     private ModerationDictionary moderationDictionary;
     @Mock
     private EventsManager eventsManager;
+    @Mock
+    private PostCacheService postCacheService;
+    @Mock
+    private ResourceMapper resourceMapper;
+    @Mock
+    private S3Service s3Service;
+
     @InjectMocks
     private PostService postService;
 
@@ -71,154 +75,53 @@ public class PostServiceTest {
 
     @BeforeEach
     void setUp() {
-        lenient().doAnswer(invocation -> {
-            Runnable r = invocation.getArgument(0);
-            r.run();
-            return null;
-        }).when(spellingExecutor).execute(any(Runnable.class));
-
-        PostRequestDto postDto = new PostRequestDto();
-        List<Post> preparedPosts = new ArrayList<>();
-
         post = new Post();
         post.setId(1L);
         post.setContent("This is errror");
-        postDto.setAuthorId(1L);
-        post.setLikes(List.of(new Like(), new Like(), new Like()));
         post.setPublished(false);
         post.setDeleted(false);
         post.setCreatedAt(LocalDateTime.now().plusDays(1));
-        preparedPosts.add(post);
-
-        Post post2 = new Post();
-        post2.setId(2L);
-        post2.setLikes(List.of(new Like(), new Like()));
-        post2.setPublished(true);
-        post2.setDeleted(false);
-        post2.setCreatedAt(LocalDateTime.now().plusDays(2));
-        preparedPosts.add(post2);
-
-        Post post3 = new Post();
-        post3.setId(3L);
-        post3.setLikes(List.of(new Like(), new Like(), new Like()));
-        post3.setPublished(false);
-        post3.setDeleted(false);
-        post3.setCreatedAt(LocalDateTime.now().plusDays(3));
-        preparedPosts.add(post3);
-
-        Post post4 = new Post();
-        post4.setId(4L);
-        post4.setLikes(List.of(new Like(), new Like()));
-        post4.setPublished(false);
-        post4.setDeleted(true);
-        post4.setCreatedAt(LocalDateTime.now().plusDays(4));
-        preparedPosts.add(post4);
-
-        PostResponseDto postResponseDto = new PostResponseDto();
-        postResponseDto.setId(1L);
-        postResponseDto.setAuthorId(1L);
+        post.setResources(new ArrayList<>());
     }
 
     @Test
-    void testCheckSpellingSuccess() throws InterruptedException {
-        String prepareDate = "{\"elements\":[{\"id\":0,\"errors\":[{\"suggestions\":" +
-                "[\"error\",\"Rorer\",\"eerier\",\"arrear\",\"rower\",\"Euro\",\"rehear\",\"err\",\"ROR\",\"Orr\"]" +
-                ",\"position\":8,\"word\":\"errror\"}]}],\"spellingErrorCount\":1}";
-        List<Post> posts = List.of(post);
-
-        when(postRepository.findByPublishedFalse()).thenReturn(posts);
-        when(api.getKey()).thenReturn("key");
-        when(api.getEndpoint()).thenReturn("endpoint");
-        when(restTemplate.postForObject(any(String.class), any(HttpEntity.class), eq(String.class)))
-                .thenReturn(prepareDate);
-
-        postService.checkSpelling();
-
-        verify(postRepository, times(1)).findByPublishedFalse();
-        verify(api, times(1)).getKey();
-        verify(api, times(1)).getEndpoint();
-        verify(postRepository, times(1)).save(any(Post.class));
-
-        Thread.sleep(200);
-
-        assertEquals("This is error", posts.get(0).getContent());
-    }
-
-    @Test
-    public void shouldCreatePosts() {
+    void testCreatePost() {
         PostRequestDto requestDto = PostRequestDto.builder()
-                .authorId(1L)
-                .projectId(2L)
-                .content("Sample Content")
+                .content("Hello")
                 .build();
+
+        Post mappedPost = new Post();
+        mappedPost.setId(10L);
+        mappedPost.setContent("Hello mapped");
+        mappedPost.setResources(new ArrayList<>());
+
+        when(postMapper.toEntity(requestDto)).thenReturn(mappedPost);
+        when(postRepository.save(any(Post.class))).thenReturn(mappedPost);
+
+        PostResponseDto mappedDto = new PostResponseDto();
+        mappedDto.setId(10L);
+        mappedDto.setContent("Hello mapped");
+        when(postMapper.toDto(mappedPost)).thenReturn(mappedDto);
 
         List<MultipartFile> images = List.of(mock(MultipartFile.class));
         List<MultipartFile> audio = List.of(mock(MultipartFile.class));
 
-        Post post = new Post();
-        post.setId(1L);
-        post.setResources(new ArrayList<>());
+        PostResponseDto result = postService.create(requestDto, images, audio);
 
-        Post mappedPost = new Post();
-        mappedPost.setPublished(false);
-        mappedPost.setDeleted(false);
-        mappedPost.setLikes(new ArrayList<>());
-        mappedPost.setComments(new ArrayList<>());
-        mappedPost.setResources(new ArrayList<>());
-
-        PostResponseDto responseDto = PostResponseDto.builder()
-                .id(1L)
-                .content("Sample Content")
-                .authorId(1L)
-                .projectId(2L)
-                .build();
-
-        when(postMapper.toEntity(requestDto)).thenReturn(mappedPost);
-        when(postRepository.save(any(Post.class))).thenReturn(post);
-        when(postMapper.toDto(any(Post.class))).thenReturn(responseDto);
-
-        PostResponseDto actualResponse = postService.create(requestDto, images, audio);
-
-        assertEquals(1L, actualResponse.getId());
-        assertEquals("Sample Content", actualResponse.getContent());
-
-        verify(postValidator, times(1)).validateCreate(requestDto);
-        verify(resourceService, times(2)).uploadResources(anyList(), anyString(), eq(post));
-        verify(postRepository, times(2)).save(any(Post.class));
+        assertEquals(10L, result.getId());
+        assertEquals("Hello mapped", result.getContent());
+        verify(postValidator).validateCreate(requestDto);
+        verify(resourceService).uploadResources(eq(images), eq("image"), eq(mappedPost));
+        verify(resourceService).uploadResources(eq(audio), eq("audio"), eq(mappedPost));
+        verify(postRepository, times(2)).save(mappedPost);
+        verify(postMapper).toDto(mappedPost);
     }
 
     @Test
-    public void shouldPublishPost() {
-        Long postId = 1L;
-        Post post = new Post();
-        post.setId(postId);
-        post.setPublished(false);
-
-        Post updatedPost = new Post();
-        updatedPost.setId(postId);
-        updatedPost.setPublished(true);
-
-        PostResponseDto postDto = new PostResponseDto();
-        postDto.setId(postId);
-
-        when(postValidator.validateAndGetPostById(postId)).thenReturn(post);
-        when(postRepository.save(post)).thenReturn(updatedPost);
-        when(postMapper.toDto(updatedPost)).thenReturn(postDto);
-
-        PostResponseDto result = postService.publishPost(postId);
-
-        verify(postValidator).validatePublish(post);
-        verify(postRepository).save(post);
-        verify(postMapper).toDto(updatedPost);
-        assertEquals(result.getId(), postId);
-    }
-
-    @Test
-    void shouldUpdatePostSuccessfully() {
-        Long postId = 1L;
-
+    void testUpdatePost() {
+        Long postId = 5L;
         PostUpdateDto updateDto = PostUpdateDto.builder()
-                .content("Updated Content")
+                .content("Updated")
                 .imageFilesIdsToDelete(List.of(1L))
                 .audioFilesIdsToDelete(List.of(2L))
                 .build();
@@ -226,122 +129,245 @@ public class PostServiceTest {
         List<MultipartFile> images = List.of(mock(MultipartFile.class));
         List<MultipartFile> audio = List.of(mock(MultipartFile.class));
 
-        Post post = new Post();
-        post.setId(postId);
-        post.setResources(new ArrayList<>());
+        Post foundPost = new Post();
+        foundPost.setId(postId);
+        foundPost.setContent("Old content");
+        foundPost.setResources(new ArrayList<>());
 
-        PostResponseDto responseDto = PostResponseDto.builder()
-                .id(postId)
-                .content("Updated Content")
-                .build();
+        when(postRepository.getPostById(postId)).thenReturn(foundPost);
+        when(postRepository.save(foundPost)).thenReturn(foundPost);
 
-        when(postRepository.getPostById(postId)).thenReturn(post);
-        when(postRepository.save(any(Post.class))).thenReturn(post);
-        when(postMapper.toDto(post)).thenReturn(responseDto);
+        PostResponseDto mappedDto = new PostResponseDto();
+        mappedDto.setId(postId);
+        mappedDto.setContent("Updated");
+        when(postMapper.toDto(foundPost)).thenReturn(mappedDto);
 
-        PostResponseDto actualResponse = postService.updatePost(postId, updateDto, images, audio);
+        PostResponseDto result = postService.updatePost(postId, updateDto, images, audio);
 
-        assertEquals(postId, actualResponse.getId());
-        assertEquals("Updated Content", actualResponse.getContent());
-
-        verify(postRepository, times(1)).getPostById(postId);
-        verify(resourceService, times(1)).deleteResources(eq(List.of(1L)));
-        verify(resourceService, times(1)).deleteResources(eq(List.of(2L)));
-        verify(resourceService, times(1)).uploadResources(eq(images), eq("image"), eq(post));
-        verify(resourceService, times(1)).uploadResources(eq(audio), eq("audio"), eq(post));
-        verify(resourceValidator, times(1)).validateResourceCounts(post);
-        verify(postRepository, times(1)).save(post);
+        assertEquals(postId, result.getId());
+        assertEquals("Updated", result.getContent());
+        verify(postRepository).getPostById(postId);
+        verify(resourceService).deleteResources(List.of(1L));
+        verify(resourceService).deleteResources(List.of(2L));
+        verify(resourceService).uploadResources(eq(images), eq("image"), eq(foundPost));
+        verify(resourceService).uploadResources(eq(audio), eq("audio"), eq(foundPost));
+        verify(resourceValidator).validateResourceCounts(foundPost);
+        verify(postRepository).save(foundPost);
+        verify(postMapper).toDto(foundPost);
     }
 
     @Test
-    public void shouldDeletePost() {
+    void testGetPost_CacheHit() {
         Long postId = 1L;
-        Post post = new Post();
-        post.setId(postId);
-        post.setPublished(true);
-        post.setDeleted(false);
+        PostResponseDto cachedDto = new PostResponseDto();
+        cachedDto.setId(postId);
+        cachedDto.setContent("Cached content");
 
-        Post updatedPost = new Post();
-        updatedPost.setId(postId);
-        updatedPost.setPublished(false);
-        updatedPost.setDeleted(true);
+        when(postCacheService.getPostFromCacheOrDb(postId)).thenReturn(cachedDto);
 
-        when(postRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postRepository.save(post)).thenReturn(updatedPost);
+        PostResponseDto result = postService.getPost(postId);
+        assertEquals(postId, result.getId());
+        assertEquals("Cached content", result.getContent());
+
+        verify(postCacheService).getPostFromCacheOrDb(postId);
+        verify(postCacheService).incrementViews(postId);
+        verifyNoInteractions(postRepository);
+    }
+
+    @Test
+    void testGetPost_CacheMiss() {
+        Long postId = 2L;
+        when(postCacheService.getPostFromCacheOrDb(postId)).thenReturn(null);
+
+        Post dbPost = new Post();
+        dbPost.setId(postId);
+        dbPost.setContent("DB content");
+        dbPost.setResources(new ArrayList<>());
+        when(postRepository.getPostById(postId)).thenReturn(dbPost);
+
+        PostResponseDto mappedDto = new PostResponseDto();
+        mappedDto.setId(postId);
+        mappedDto.setContent("DB content");
+        when(postMapper.toDto(dbPost)).thenReturn(mappedDto);
+
+        PostResponseDto result = postService.getPost(postId);
+        assertEquals(postId, result.getId());
+        assertEquals("DB content", result.getContent());
+
+        verify(postCacheService).getPostFromCacheOrDb(postId);
+        verify(postRepository).getPostById(postId);
+        verify(postMapper).toDto(dbPost);
+        verify(postCacheService).savePostCache(mappedDto);
+        verify(postCacheService).incrementViews(postId);
+    }
+
+    @Test
+    void testPublishPost() {
+        Long postId = 1L;
+        Post postEntity = new Post();
+        postEntity.setId(postId);
+        postEntity.setPublished(false);
+
+        Post saved = new Post();
+        saved.setId(postId);
+        saved.setPublished(true);
+
+        when(postValidator.validateAndGetPostById(postId)).thenReturn(postEntity);
+        doNothing().when(postValidator).validatePublish(any(Post.class));
+        when(postRepository.save(postEntity)).thenReturn(saved);
+
+        PostResponseDto mappedDto = new PostResponseDto();
+        mappedDto.setId(postId);
+        mappedDto.setAuthorId(999L);
+        mappedDto.setContent("Published");
+        when(postMapper.toDto(saved)).thenReturn(mappedDto);
+
+        PostResponseDto result = postService.publishPost(postId);
+
+        assertTrue(saved.isPublished());
+        assertEquals(postId, result.getId());
+        assertEquals("Published", result.getContent());
+
+        verify(postValidator).validatePublish(postEntity);
+        verify(postRepository).save(postEntity);
+        verify(postMapper).toDto(saved);
+        verify(eventsManager).generateAndSendAuthorCachedEvent(999L);
+        verify(postCacheService).savePostCache(mappedDto);
+        verify(eventsManager).generateAndSendPostCachedEvent(mappedDto);
+    }
+
+    @Test
+    void testDeletePost() {
+        Long postId = 55L;
+        Post p = new Post();
+        p.setId(postId);
+        p.setPublished(true);
+        p.setDeleted(false);
+
+        Post afterSave = new Post();
+        afterSave.setId(postId);
+        afterSave.setPublished(false);
+        afterSave.setDeleted(true);
+
+        when(postRepository.findById(postId)).thenReturn(Optional.of(p));
+        when(postRepository.save(p)).thenReturn(afterSave);
 
         postService.deletePost(postId);
 
-        verify(postValidator).validateDelete(post);
+        assertTrue(afterSave.isDeleted());
+        verify(postValidator).validateDelete(p);
         verify(postRepository).findById(postId);
-        verify(postRepository).save(post);
-        assertTrue(updatedPost.isDeleted());
+        verify(postRepository).save(p);
     }
 
     @Test
-    public void shouldReturnPostById() {
-        Long postId = 1L;
-        Post post = new Post();
-        post.setId(postId);
+    void testGetPostById() {
+        Long postId = 77L;
+        Post p = new Post();
+        p.setId(postId);
+        p.setContent("Post content");
+        p.setResources(new ArrayList<>());
+        when(postRepository.findById(postId)).thenReturn(Optional.of(p));
 
-        PostResponseDto postDto = new PostResponseDto();
-        postDto.setId(postId);
-
-        when(postRepository.findById(postId)).thenReturn(Optional.of(post));
-        when(postMapper.toDto(post)).thenReturn(postDto);
+        PostResponseDto mapped = new PostResponseDto();
+        mapped.setId(postId);
+        mapped.setContent("Post content");
+        when(postMapper.toDto(p)).thenReturn(mapped);
 
         PostResponseDto result = postService.getPostById(postId);
+        assertEquals(postId, result.getId());
+        assertEquals("Post content", result.getContent());
 
         verify(postRepository).findById(postId);
-        verify(postMapper).toDto(post);
-        assertEquals(postId, result.getId());
+        verify(postMapper).toDto(p);
     }
 
     @Test
-    public void shouldFilterPosts() {
+    void testCheckSpellingSuccess() throws InterruptedException {
+        doAnswer(invocation -> {
+            Runnable r = invocation.getArgument(0);
+            r.run();
+            return null;
+        }).when(spellingExecutor).execute(any(Runnable.class));
+
+        List<Post> posts = new ArrayList<>();
+        posts.add(post);
+
+        when(postRepository.findByPublishedFalse()).thenReturn(posts);
+        when(api.getKey()).thenReturn("apiKey");
+        when(api.getEndpoint()).thenReturn("endpoint");
+        String responseJson = "{\"elements\":[{\"id\":0,\"errors\":[{\"suggestions\":[\"error\"],\"word\":\"errror\"}]}],\"spellingErrorCount\":1}";
+        when(restTemplate.postForObject(eq("endpoint"), any(HttpEntity.class), eq(String.class)))
+                .thenReturn(responseJson);
+
+        postService.checkSpelling();
+
+        verify(postRepository).findByPublishedFalse();
+        verify(restTemplate).postForObject(eq("endpoint"), any(HttpEntity.class), eq(String.class));
+        verify(postRepository).save(any(Post.class));
+        assertEquals("This is error", post.getContent());
+    }
+
+    @Test
+    void testGetPosts() {
         PostFilterDto filterDto = new PostFilterDto();
-        PostFilters filter = mock(PostFilters.class);
+        when(postRepository.findAll()).thenReturn(List.of(post));
 
-        Post post1 = new Post();
-        Post post2 = new Post();
+        PostFilters mockFilter = mock(PostFilters.class);
+        when(postFilters.stream()).thenReturn(Stream.of(mockFilter));
+        when(mockFilter.isApplicable(filterDto)).thenReturn(true);
+        when(mockFilter.apply(any(), eq(filterDto))).thenAnswer(i -> i.getArgument(0));
 
-        PostResponseDto postDto1 = new PostResponseDto();
-        PostResponseDto postDto2 = new PostResponseDto();
-
-        when(postRepository.findAll()).thenReturn(Arrays.asList(post1, post2));
-        when(postFilters.stream()).thenReturn(Stream.of(filter));
-        when(filter.isApplicable(filterDto)).thenReturn(true);
-        when(filter.apply(any(), eq(filterDto))).thenReturn(Stream.of(post1, post2));
-        when(postMapper.toListPostDto(anyList())).thenReturn(Arrays.asList(postDto1, postDto2));
+        PostResponseDto mappedDto = new PostResponseDto();
+        mappedDto.setId(100L);
+        when(postMapper.toListPostDto(anyList())).thenReturn(List.of(mappedDto));
 
         List<PostResponseDto> result = postService.getPosts(filterDto);
+        assertEquals(1, result.size());
+        assertEquals(100L, result.get(0).getId());
 
         verify(postRepository).findAll();
-        verify(filter).isApplicable(filterDto);
-        verify(filter).apply(any(), eq(filterDto));
+        verify(postFilters).stream();
+        verify(mockFilter).isApplicable(filterDto);
+        verify(mockFilter).apply(any(), eq(filterDto));
         verify(postMapper).toListPostDto(anyList());
-        assertEquals(2, result.size());
     }
 
     @Test
-    public void testVerifyPostsForModeration() {
-        Post post1 = new Post();
-        post1.setId(1L);
-        post1.setContent("Test1");
-        Post post2 = new Post();
-        post2.setId(2L);
-        post2.setContent("Test2");
-        List<Post> batch = Arrays.asList(post1, post2);
+    void testVerifyPostsForModeration() {
+        Post p1 = new Post();
+        p1.setId(1L);
+        p1.setContent("Text1");
+        p1.setResources(new ArrayList<>());
+        Post p2 = new Post();
+        p2.setId(2L);
+        p2.setContent("Text2");
+        p2.setResources(new ArrayList<>());
 
-        when(moderationDictionary.isVerified(post1.getContent())).thenReturn(true);
-        when(moderationDictionary.isVerified(post2.getContent())).thenReturn(false);
+        List<Post> posts = List.of(p1, p2);
+        when(moderationDictionary.isVerified("Text1")).thenReturn(true);
+        when(moderationDictionary.isVerified("Text2")).thenReturn(false);
 
-        postService.verifyPostsForModeration(batch);
+        postService.verifyPostsForModeration(posts);
 
-        assertEquals(LocalDateTime.now().getMinute(), post1.getVerifiedDate().getMinute());
-        assertTrue(post1.getVerified());
-        assertEquals(LocalDateTime.now().getMinute(), post2.getVerifiedDate().getMinute());
-        assertFalse(post2.getVerified());
-
+        assertTrue(p1.getVerified());
+        assertFalse(p2.getVerified());
         verify(postRepository, times(2)).save(any(Post.class));
+    }
+
+    @Test
+    void testCheckSpellingHttpClientErrorException() {
+        when(postRepository.findByPublishedFalse()).thenReturn(List.of(post));
+        when(api.getKey()).thenReturn("apiKey");
+        when(api.getEndpoint()).thenReturn("endpoint");
+
+        HttpClientErrorException httpException =
+                new HttpClientErrorException(org.springframework.http.HttpStatus.BAD_REQUEST, "Bad Request");
+        when(restTemplate.postForObject(eq("endpoint"), any(HttpEntity.class), eq(String.class)))
+                .thenThrow(httpException);
+
+        assertThrows(HttpClientErrorException.class, () -> postService.checkSpelling());
+        verify(postRepository).findByPublishedFalse();
+        verify(restTemplate).postForObject(eq("endpoint"), any(HttpEntity.class), eq(String.class));
     }
 }
